crates/swc_ecma_parser/tests/test262-error-references/fail/15ce7f870c38eaff.js.stderr
error: Parenthesized expression cannot be empty
 --> $DIR/tests/test262-parser/fail/15ce7f870c38eaff.js:1:1
  |
1 | () ? 42
  | ^^

